# assignment

./: CMakeLists.txt  README.md  package.xml
design/: design.md
scripts/: poc_pick_cube.py
