<?xml version="1.0"?>
<package format="2">
  <name>assignment</name>
  <version>0.1.0</version>
  <description>Package of Assignment for Vention</description>

  <maintainer email="longfei.zhao.work@gmail.com">Longfe Zhao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>dsr_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>dsr_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>dsr_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
